fix: harden architecture, concurrency, and lifecycle